# dreamteams

./: .coveragerc  .gitignore  .gitleaks-baseline.json  .ignore  .importlinter  .test_durations  AGENTS.md  CLAUDE.md  GETTING_STARTED.md  README.md  _typos.toml  justfile  main.py  mkdocs.yml  package-lock.json  pyproject.toml
.config/: .env  .env.authentik  .env.kc  .env.migrations  .env.migrations.local  .env.oauthproxy  .env.pgbouncer  .env.tests  .env.zitadel  config.toml  exporter.toml  frontend-config.js  init-db.sql  migrations.local.toml  migrations.toml  nginx.conf  oauth2-proxy.toml  postgresql.conf  reset-app-db.sql  vector.yaml  zitadel-proxy.conf
.config/nginx-snippets/: oauth2-auth-request.conf
.github/workflows/: lint_test_deploy.yml
docker/: Dockerfile  docker-compose.base.yml  docker-compose.tests.yml  docker-compose.yml  grafana.Dockerfile  loki.Dockerfile  oauth2-proxy.Dockerfile  tests.Dockerfile  vector.Dockerfile
docs/: AGENTS.md  authentik-setup.md  domain.md  errors.md  index.md  openapi.json  user-bans.md  zitadel-setup.md
docs/entities/: application-form.md  application.md  competition-tag.md  competition.md  index.md  organizer-invite.md  organizer.md  participant.md  user.md
docs/errors/: application-management.md  auth.md  competition-management.md  generic.md  index.md  invite-management.md  participant-media.md  user-management.md
docs/exporter/: errors.md  index.md  public-http-api.md
docs/exporter/entities/: export-job.md
docs/exporter/usecase/: create_export_job.md  export_applications_to_sheets.md  read_export_job.md  usecase.md
docs/exporter/value-objects/: job-status.md
docs/usecase/: create_competition.md  delete_competition.md  get_competition_by_id.md  list_competitions.md  read_competition.md  register_organizer.md  update_competition.md  view_profile.md
docs/usecase/attach_avatar/: attach_avatar.md  detach_avatar.md  usecase.md
docs/usecase/block_user/: block_user.md  unblock_user.md  usecase.md
docs/usecase/delete_my_competition/: usecase.md
docs/usecase/explore_competitions/: usecase.md
docs/usecase/issue_invite/: revoke_invite.md  usecase.md
docs/usecase/manage_application_form/: create_application_form.md  delete_application_form.md  read_application_form.md  usecase.md
docs/usecase/manage_applications/: list_applications.md  read_application.md  usecase.md
docs/usecase/manage_competitions/: delete_competition.md  list_competitions.md  read_competition.md  update_competition.md  usecase.md
docs/usecase/manage_invites/: issue_invite.md  list_invites.md  read_invite.md  usecase.md
docs/usecase/manage_my_applications/: list_my_applications.md  read_my_application.md  usecase.md
docs/usecase/manage_profile/: delete_profile.md  read_profile.md  update_organizer.md  update_participant.md  usecase.md
docs/usecase/manage_tags/: create_tag.md  delete_tag.md  list_tags.md  read_tag.md  usecase.md
docs/usecase/manage_users/: list_users.md  read_user_by_admin.md  usecase.md
docs/usecase/preview_competition/: list_competitions.md  read_competition.md  usecase.md
docs/usecase/preview_competitions/: preview_competitions.md  usecase.md
docs/usecase/publish_competition/: create_competition.md  publish_competition.md  usecase.md
docs/usecase/read_application/: read_application.md  usecase.md
docs/usecase/register/: register_organizer.md  register_participant.md  usecase.md
docs/usecase/register_user/: register_participant.md  register_superuser.md  usecase.md
docs/usecase/review_application/: accept_application.md  read_application.md  reject_application.md  usecase.md
docs/usecase/submit_application/: list_competitions.md  read_application_form.md  read_competition.md  submit_application.md  usecase.md  withdraw_application.md
docs/usecase/update_my_competition/: change_archive_status.md  reschedule.md  update_general_info.md  usecase.md
docs/usecase/view_issued_invites/: usecase.md
docs/usecase/view_my_applications/: usecase.md
docs/usecase/view_my_competitions/: list_competitions.md  read_competition.md  usecase.md
docs/usecase/view_submitted_applications/: usecase.md
docs/usecase/view_tags/: list_tags.md  usecase.md
docs/usecase/view_users/: list_users.md  usecase.md
docs/value-objects/: application-form-fields.md  competition-format.md  competition-milestones.md  competition-schedule.md  competition-tags.md  competition-track.md  competition-tracks.md  competition-venue.md  domain.md  field-choice.md  field-type.md  field.md  index.md  milestone-description.md  milestone.md  participant-contact.md  participant-contacts.md  participant-limits.md  participant-skill.md  participant-skills.md  participant-type.md  team-size-range.md
frontend/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.config.ts  i18n.config.ts  justfile  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.config.ts  app.vue  error.vue
frontend/app/components/: AvatarEditModal.vue  AvatarUpload.vue  CookieConsent.vue  HelpTooltip.vue  LanguageSwitcher.vue  NotificationBell.vue  OrganizerEditModal.vue  OrganizerRegistrationForm.vue  ParticipantEditModal.vue  ParticipantFieldEditModal.vue  ParticipantNameEditModal.vue  ParticipantRegistrationForm.vue  ThemeToggle.vue
frontend/app/composables/: useApi.ts  useAuth.ts  useBackNavigation.ts  useBlockedAccount.ts  useCompetitionFormatters.ts  useCompetitionStatus.ts  useCompetitionsPreview.ts  useCookieConsent.ts  useErrorHandler.ts  useExploreCompetitions.ts  (+7 more)
frontend/docs/: api-integration.md  landing-page.md
frontend/locales/: en.json  ru.json
frontend/nginx/: default.conf
frontend/public/: config.js  site.webmanifest
keycloak/: README.md
keycloak/clients/: 791bfcbc-7a4b-4d89-83b3-cbed6487db19.json
src/dreamteams_common/: clock.py  errors.py  interactor.py  logger.py  logs.py  uow.py
src/dreamteams_exporter/: README.md
tests/integration/: api_client.py  competition_helpers.py  conftest.py  constants.py  containers.py  test_probe.py
tests/unit/: composite.py  conftest.py  helpers.py
(+810 files in other folders)
