[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project]
name = 'crudik'
version = '1.0.0'
requires-python = '>=3.13'
dependencies = [
    "dishka==1.7.2",
    "fastapi[standard]==0.123.0",
    "asyncpg==0.31.0",
    "sqlalchemy==2.0.44",
    "alembic==1.17.2",
    "aiohttp==3.13.2",
    "adaptix==3.0.0b11",
    "toml-rs==0.1.0",
    "structlog==25.5.0",
]

[project.optional-dependencies]
lint = ['ruff==0.14.8', 'mypy==1.19.0', 'import-linter==2.7']
test = ['pytest==9.0.1', 'pytest-asyncio==1.3.0']
dev = ['crudik[test,lint]']
ci = ['crudik[dev]']

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true

enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
    "explicit-override",
    "mutable-override",
    "unimported-reveal",
    "deprecated",
]

files = ["src/", "tests/"]
exclude = ["src/crudik/adapters/db/alembic/migrations/versions/"]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = ["src/crudik/adapters/db/alembic/**/*.py"]

[tool.ruff.lint]
select = ['ALL']

ignore = [
    # Strange and obscure
    'D100',
    'D104',
    'D401',
    'RET504',
    'D107',
    'S104',
    'ANN401',
    'TC002',
    # Does not work correctly
    # Not applicable for now
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[[project.authors]]
name = 'lubaskinc0de'
email = 'lubaskincorporation@gmail.com'

[project.scripts]
crudik = "crudik.bootstrap.cli:main"
