[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project]
name = 'dreamteams'
version = '1.0.0'
requires-python = '>=3.13'
dependencies = [
    "dishka==1.7.2",
    "fastapi[standard]==0.123.0",
    "asyncpg==0.31.0",
    "sqlalchemy[postgresql-asyncpg]==2.0.44",
    "alembic==1.17.2",
    "aiohttp==3.13.2",
    "adaptix==3.0.0b11",
    "toml-rs==0.1.0",
    "structlog==25.5.0",
    "pyjwt==2.10.1",
    "cryptography==46.0.3",
    "pydantic-extra-types==2.10.6",
    "pydantic==2.12.5",
    "phonenumbers==9.0.20",
]
[project.optional-dependencies]
lint = ['ruff==0.14.8', 'mypy==1.19.0', 'import-linter==2.7', 'typos==1.41.0']
test = [
    'pytest==9.0.1',
    'pytest-asyncio==1.3.0',
    "polyfactory==3.1.0",
    "faker==39.0.0",
]
dev = ['dreamteams[test,lint]']
ci = ['dreamteams[dev]']

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true

enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
    "explicit-override",
    "mutable-override",
    "unimported-reveal",
    "deprecated",
]

files = ["src/", "tests/"]
exclude = ["src/dreamteams/adapters/db/alembic/migrations/versions/"]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = ["src/dreamteams/adapters/db/alembic/**/*.py"]

[tool.ruff.lint]
select = ['ALL']

ignore = [
    # Strange and obscure
    'D100',
    'D104',
    'D401',
    'RET504',
    'D107',
    'S104',
    'ANN401',
    'TC002',
    # Does not work correctly
    # Not applicable for now
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "PLR0913"]

[[project.authors]]
name = 'lubaskinc0de'
email = 'lubaskincorporation@gmail.com'

[project.scripts]
dreamteams = "dreamteams.bootstrap.cli:main"
